# indieauth

./: .gitignore  Cargo.toml  Makefile  README.md
daemontools/: README.md
daemontools/indieauth/: run
daemontools/indieauth/env/: BIND_ADDR  DATABASE_PATH
daemontools/indieauth/log/: run
migrations/: 0001_init.sql
src/: body.rs  client_metadata.rs  config.rs  csrf.rs  error.rs  html.rs  idgen.rs  main.rs  pkce.rs  session.rs  state.rs  util.rs  webauthn.rs
src/db/: codes.rs  credentials.rs  mod.rs  sessions.rs  tokens.rs
src/routes/: authorize.rs  credentials.rs  introspection.rs  login.rs  metadata.rs  mod.rs  revocation.rs  token.rs
static/: login.js  redirect.js  register.js  style.css  webauthn-common.js
