[package]
name = "indieauth"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.21"
bytes = "1.12.1"
http = "1.4.2"
http-body-util = "0.1.4"
hyper = { version = "1.11.0", features = ["server", "http1"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "webpki-roots", "ring"] }
hyper-util = { version = "0.1.20", default-features = false, features = ["server", "http1", "tokio", "client-legacy"] }
openssl = { version = "0.10.81", features = ["vendored"] }
rand = "0.9"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
subtle = "2.6.1"
time = { version = "0.3.54", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "signal", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
webauthn-rs = { version = "0.5.5", default-features = false, features = ["danger-allow-state-serialisation"] }
